2007-07-29  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_message_area_update), (themes_init):
	cope with unset GConf keys, and group GConf notifications

2007-07-29  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c: (theme_message_area_response_cb),
	(theme_message_area_update), (theme_selection_changed_cb),
	(background_or_font_changed), (themes_init):
	_Really_ only show background/font suggestions if they haven't
	already been applied.

2007-07-29  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c: (theme_message_area_response_cb),
	(theme_message_area_update), (theme_selection_changed_cb):
	Only show background/font suggestions if they haven't already
	been applied.

2007-07-29  Denis Washington  <denisw@svn.gnome.org>

	* data/appearance.glade:
	* appearance-themes.c: (theme_message_area_response_cb),
	(theme_message_area_update), (theme_selection_changed_cb),
	(themes_init), (themes_shutdown):
	* gedit-message-area.[ch]:
	* theme-util.h:
	Added controls for applying suggested backgrounds and/or fonts from
	metathemes. Copied over some code from gedit for the message area
	(GeditMessageArea).

	* Makefile.am:
	Added gedit-message-area.[ch].

2007-07-29  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: (cursor_theme_sort_func), (prepare_list),
	(style_init): Prevent some memory leaks

2007-07-29  Thomas Wood  <thos@gnome.org>

	* theme-installer.c: (file_theme_type), (gnome_theme_install_real):
	- Fix theme installation (free called before last last use of a string)
	- Update icon cache when installing icon themes (closes bug 355486)

2007-07-29  Thomas Wood  <thos@gnome.org>

	* data/appearance.glade: Fix mnemonics and Customize Theme window title.
	Closes bug 461255.

2007-07-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_view_tooltip_cb), (desktop_init):
	* data/appearance.glade: get rid of a number of unnecessary casts and the