@@ -1,3 +1,10 @@
+2007-07-29  Denis Washington  <denisw@svn.gnome.org>
+
+	* appearance.h:
+	* appearance-desktop.c: (desktop_init):
+	Don't store the cell renderer in AppearanceData, it is only needed by
+	desktop_init().
+
 2007-07-29  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-themes.c: (theme_message_area_update), (themes_init):
